[package]
name = "currencyapi"
version = "0.2.0"
description = "currencyapi API"
authors = ["Yehuthith <yehuthith@gmail.com>"]
repository = "https://github.com/yehuthi/currencyapi-rs"
license = "MIT OR Apache-2.0"
categories = ["api-bindings"]
keywords = ["currency", "convert", "freecurrencyapi", "money", "api"]
edition = "2021"

[dependencies]
atoi = "2.0.0"
bstringify = "0.1.2"
chrono = "0.4.28"
reqwest = { version = "0.11.20", features = ["json"] }
serde_json = "1.0.105"
thiserror = "1.0.48"

[dev-dependencies]
clap = { version = "4.2.2", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
rust_decimal = "1.32.0"

[[example]]
name = "cli"
